fixed overflow spacing issues in horizontal containers that would skip lines

--- a/css/custom.css
+++ b/css/custom.css
@@ -106,6 +106,8 @@ html, body {
     width: 100%;
     height: 100%;
     position: relative;
+    text-align: center;
+    overflow: hidden;
 }
 
 
